main.tf
#  vpc
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = var.vpc_name
  }
}

# CICD planning
# public ->  "10.0.1.0/24", "10.0.2.0/24"
# private -> "10.0.3.0/24", "10.0.4.0/24"
# rds ->  "10.0.5.0/24", "10.0.6.0/24"

# 2 public subnets

# resource "aws_subnet" "public" {
# count = length(var.subnet_data)
#   vpc_id                  = aws_vpc.main.id
#   cidr_block              = var.subnet_data[count.index].cidr
# #   map_public_ip_on_launch = var.If_public_subnet ? true : false
#     map_public_ip_on_launch = var.subnet_data[count.index].public ? true : false
#   # tiernary operator -> condition ? true : false
#   availability_zone       = var.subnet_data[count.index].availability_zone

#   tags = {
#     # Name = "${var.vpc_name}-${var.If_public_subnet ? "public" : "private"}${count.index + 1}"
#     Name = "${var.vpc_name}-${var.subnet_data[count.index].public ? "public" : "private"}${count.index + 1}"
#   }
# }


# ─── Public Subnets ───────────────────────────────────────────────────────────

resource "aws_subnet" "public" {
  count = length(var.public_subnet_data)

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_data[count.index].cidr
  map_public_ip_on_launch = true
  availability_zone       = var.public_subnet_data[count.index].availability_zone

  tags = {
    Name = "${var.vpc_name}-${var.public_subnet_data[count.index].prefix}-${count.index + 1}"
  }
}

# internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.vpc_name}-igw"
  }
}

# public route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "${var.vpc_name}-public-rt"
  }
}

# associate public subnets with public route table
resource "aws_route_table_association" "public" {
  count          = length(var.public_subnet_data)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}


#####################################

resource "aws_subnet" "private" {
  count = length(var.private_subnet_data)

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.private_subnet_data[count.index].cidr
  map_public_ip_on_launch = false
  availability_zone       = var.private_subnet_data[count.index].availability_zone

  tags = {
    Name = "${var.vpc_name}-${var.private_subnet_data[count.index].prefix}-${count.index + 1}"
  }
}

# private route table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.vpc_name}-private-rt"
  }
}

#  subnet association with private route table
resource "aws_route_table_association" "private" {
  count          = length(var.private_subnet_data)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}


# elastic ip for nat gateway
resource "aws_eip" "nat" {
  ## count = var.need_nat_gateway && !var.need_single_nat_gateway ? length(var.public_subnet_data) : 1 ##
  # count = var.need_nat_gateway ? var.need_single_nat_gateway ? 1: 2 : 0
  count = var.need_nat_gateway ? var.need_single_nat_gateway ? 1 : length(var.public_subnet_data) : 0
}

# nat gateway
resource "aws_nat_gateway" "nat" {
  count         = var.need_nat_gateway ? var.need_single_nat_gateway ? 1 : length(var.public_subnet_data) : 0
  allocation_id = aws_eip.nat[count.index].id
  # Calculate the subnet index using modulo operator to cycle through available public subnets
  # This ensures even distribution of resources across multiple subnets when count exceeds subnet count
  subnet_id = aws_subnet.public[count.index % length(var.public_subnet_data)].id

  tags = {
    Name = "${var.vpc_name}-nat-${count.index + 1}"
  }
}

# route for the route table
resource "aws_route" "private" {
  count                  = var.need_nat_gateway ? var.need_single_nat_gateway ? 1 : length(var.public_subnet_data) : 0
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat[count.index].id
}
